--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
@@ -49,7 +49,7 @@
                             <h3 class="panel-title">Страницы</h3>
                         </div>
                         <div class="panel-body">
-                            <div class="icon">
+                            <div class="text-info icon">
                                 <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
                             </div>
                             Функциональные страницы проекта<br>
@@ -74,10 +74,14 @@
                 <div class="col-xs-12 col-sm-6 col-md-3">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Место зарезервировано</h3>
+                            <h3 class="panel-title">Настройки</h3>
                         </div>
                         <div class="panel-body">
-                            <div class="icon"></div>
+                            <div class="icon">
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                            </div>
+                            Дополнительные настройки проекта<br>
+                            <a href="{{ url('site_settings', {'project': project.id}) }}">Перейти</a>
                         </div>
                     </div>
                 </div>
