--- a/src/CustomerHunt/SiteBundle/Resources/views/replacement_dictionaries/replacements.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/replacement_dictionaries/replacements.html.twig
@@ -94,6 +94,15 @@
                     <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span> Добавить еще одну замену
                 </a>
             </span>
+            <span class="help-block">
+                Замена с городом:<br>
+                <code>%city%</code> &mdash; название города в именительном падеже<br>
+                <code>%city_gen%</code> &mdash; название города в родительном падеже<br>
+                <code>%city_dat%</code> &mdash; название города в дательном падеже<br>
+                <code>%city_acc%</code> &mdash; название города в винительном падеже<br>
+                <code>%city_abl%</code> &mdash; название города в творительном падеже<br>
+                <code>%city_pre%</code> &mdash; название города в предложном падеже
+            </span>
             <hr>
             <em>Знаком <span class="text-danger">*</span> отмечены поля, обязательные для заполнения</em>
             <hr>
