--- a/src/CustomerHunt/SiteBundle/Resources/views/api/replacement.js.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/api/replacement.js.twig
@@ -1,5 +1,4 @@
 {#<script>#}
-var hunter_replacement_loaded = false;
 var hunter_replacement_city = null;
 var hunter_replacement_cities = {{ cities|raw }};
 var hunter_replacement_parameters = {{ parameters|raw }};
@@ -55,8 +54,6 @@ function hunter_replacement_init() {
             }
         }
     }
-
-    hunter_replacement_loaded = true;
 }
 
 function hunter_replacement_ymaps_init() {
@@ -78,10 +75,6 @@ function hunter_replacement_ymaps_init() {
 }
 
 $(document).ready(function() {
-    var ymaps_script = $('<script></script>');
-    ymaps_script.attr('src', 'http://api-maps.yandex.ru/2.0-stable/?load=package.full&lang=ru-RU');
-    $('head').append(ymaps_script);
-    ymaps_script.load(function() { ymaps.ready(hunter_replacement_ymaps_init); });
-    setTimeout(function() { if (!hunter_replacement_loaded) hunter_replacement_ymaps_init(); }, 5000);
+    ymaps.ready(hunter_replacement_ymaps_init);
 });
 {#</script>#}
