--- a/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/projects/project.html.twig
@@ -81,7 +81,7 @@
                                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </div>
                             Дополнительные настройки проекта<br>
-                            <a href="{{ url('site_settings', {'project': project.id}) }}">Перейти</a>
+                            <a href="{{ url('site_project_settings', {'project': project.id}) }}">Перейти</a>
                         </div>
                     </div>
                 </div>
