--- a/src/CustomerHunt/SiteBundle/Resources/views/settings/edit_city.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/settings/edit_city.html.twig
@@ -1,23 +1,11 @@
 {% extends 'CustomerHuntSiteBundle::layout.html.twig' %}
 
-{% block title %}Новый город{% endblock %}
+{% block title %}{{ view.city.caption|e }}{% endblock %}
 
 {% block navigation %}
-    {% set project = view.project %}
     <li>
-        <a href="{{ url('site_projects') }}">
-            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; Проекты
-        </a>
-    </li>
-    <li>
-        <a href="{{ url('site_projects_project', {'project': project.id}) }}">
-            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp;
-            {% if project.caption|length > 27 %}{{ project.caption|e[:27] }}...{% else %}{{ project.caption|e }}{% endif %}
-        </a>
-    </li>
-    <li>
-        <a href="{{ url('site_settings', {'project': project.id}) }}">
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Настройки проекта
+        <a href="{{ url('site_settings') }}">
+            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Настройки
         </a>
     </li>
     <li class="active">
@@ -26,7 +14,6 @@
 {% endblock %}
 
 {% block content %}
-    {% set project = view.project %}
     {% set city = view.city %}
     <div class="page">
         <div class="page-header">
@@ -121,7 +108,7 @@
             <hr>
             <em>Знаком <span class="text-danger">*</span> отмечены поля, обязательные для заполнения</em>
             <hr>
-            <a href="{{ url('site_projects_project', {'project': project.id}) }}" class="btn btn-default">
+            <a href="{{ url('site_settings') }}" class="btn btn-default">
                 <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
             </a>
             <button type="submit" class="btn btn-success">
