--- a/src/CustomerHunt/SiteBundle/Resources/views/settings/index.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/settings/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CustomerHuntSiteBundle::layout.html.twig' %}
 
-{% block title %}Настройки проекта{% endblock %}
+{% block title %}Настройки{% endblock %}
 
 {% block head_additions %}
     <style>
@@ -10,29 +10,18 @@
 {% endblock %}
 
 {% block navigation %}
-    {% set project = view.project %}
-    <li>
-        <a href="{{ url('site_projects') }}">
-            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp; Проекты
-        </a>
-    </li>
-    <li>
-        <a href="{{ url('site_projects_project', {'project': project.id}) }}">
-            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp;
-            {% if project.caption|length > 27 %}{{ project.caption|e[:27] }}...{% else %}{{ project.caption|e }}{% endif %}
-        </a>
-    </li>
     <li class="active">
-        <a><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Настройки проекта</a>
+        <a>
+            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Настройки
+        </a>
     </li>
 {% endblock %}
 
 {% block content %}
-    {% set project = view.project %}
     <div class="page">
         <div class="page-header">
             <h1>
-                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Настройки проекта
+                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Настройки
             </h1>
         </div>
         <h2>Города</h2>
@@ -55,7 +44,7 @@
                     <td>{{ city.longitude|e }}</td>
                     <td class="td-actions">
                         <div class="actions">
-                            <a href="{{ url('site_settings_city_edit', {'project': project.id, 'city': city.id}) }}" class="edit">
+                            <a href="{{ url('site_settings_city_edit', {'city': city.id}) }}" class="edit">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#" class="remove">
@@ -71,11 +60,11 @@
             {% endfor %}
             </tbody>
         </table>
-        <a href="{{ url('site_settings_city_add', {'project': project.id}) }}" class="btn btn-success">
+        <a href="{{ url('site_settings_city_add') }}" class="btn btn-success">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Добавить город
         </a>
         <hr>
-        <a href="{{ url('site_projects_project', {'project': project.id}) }}" class="btn btn-default">
+        <a href="{{ url('site_general_index') }}" class="btn btn-default">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span> Назад
         </a>
     </div>
