--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
@@ -143,7 +143,7 @@
         </p>
         <p>
             Подключите API Яндекс.Карт, если он еще не подключен. В конец тэга HEAD вставьте следующий код:<br>
-            <code>{% filter escape %}<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.full&lang=ru-RU"></script>{% endfilter %}</code>
+            <code>{% filter escape %}<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.map&lang=ru-RU"></script>{% endfilter %}</code>
         </p>
         <p>
             В конец тэга BODY вставьте следующий код:<br>
