--- a/src/CustomerHunt/SiteBundle/Resources/views/general/index.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/general/index.html.twig
@@ -53,7 +53,7 @@
                                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                             </div>
                             Управление пользователями<br>
-                            {#<a href="{{ url('site_users') }}">Перейти</a>#}
+                            <a href="{{ url('site_users') }}">Перейти</a>
                         </div>
                     </div>
                 </div>
