--- a/src/CustomerHunt/SiteBundle/Resources/views/notices/security.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/notices/security.html.twig
@@ -4,5 +4,5 @@
 {% endif %}
 {% if notice == 'code_refreshed' %}
     <h4>Код обновлен</h4>
-    <p>Код авторизации для Вашего пользователя был успешно обновлен.</p>
+    <p>Код авторизации для пользователя был успешно обновлен.</p>
 {% endif %}
