--- a/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
+++ b/src/CustomerHunt/SiteBundle/Resources/views/pages/page.html.twig
@@ -85,11 +85,11 @@
         </a>
         <h3>Код встраивания</h3>
         <p>
-            Подключите jQuery, если он еще не подключен. В конец тэга HEAD вставьте следующий код:<br>
+            Подключите jQuery, если он еще не подключен. В начало тэга HEAD вставьте следующий код:<br>
             <code>{% filter escape %}<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>{% endfilter %}</code>
         </p>
         <p>
-            В конец тэга BODY вставьте следующий код:<br>
+            В начало тэга HEAD вставьте следующий код:<br>
             <code>{% filter escape %}<script src="{{ url('site_api_formhandler', {'code': app.user.code|e, 'project': project.id, 'page': page.id}) }}"></script>{% endfilter %}</code>
         </p>
         <hr>
@@ -138,15 +138,15 @@
         </a>
         <h3>Код встраивания</h3>
         <p>
-            Подключите jQuery, если он еще не подключен. В конец тэга HEAD вставьте следующий код:<br>
+            Подключите jQuery, если он еще не подключен. В начало тэга HEAD вставьте следующий код:<br>
             <code>{% filter escape %}<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>{% endfilter %}</code>
         </p>
         <p>
-            Подключите API Яндекс.Карт, если он еще не подключен. В конец тэга HEAD вставьте следующий код:<br>
+            Для работы с заменами с городами подключите API Яндекс.Карт, если он еще не подключен. В начало тэга HEAD вставьте следующий код:<br>
             <code>{% filter escape %}<script src="http://api-maps.yandex.ru/2.0-stable/?load=package.map&lang=ru-RU"></script>{% endfilter %}</code>
         </p>
         <p>
-            В конец тэга BODY вставьте следующий код:<br>
+            В начало тэга HEAD вставьте следующий код:<br>
             <code>{% filter escape %}<script src="{{ url('site_api_replacement', {'code': app.user.code|e, 'project': project.id, 'page': page.id}) }}"></script>{% endfilter %}</code>
         </p>
         <hr>
